<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/cab_confirm_selection"
        android:icon="@drawable/ic_check_vector"
        android:title="@string/confirm_selection"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cab_share"
        android:icon="@drawable/ic_share_vector"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cab_rename"
        android:icon="@drawable/ic_edit_vector"
        android:title="@string/rename"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cab_properties"
        android:icon="@drawable/ic_info_vector"
        android:title="@string/properties"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cab_delete"
        android:icon="@drawable/ic_delete_vector"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cab_hide"
        android:icon="@drawable/ic_hide"
        android:title="@string/hide"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cab_unhide"
        android:icon="@drawable/ic_unhide_vector"
        android:title="@string/unhide"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cab_copy_to"
        android:title="@string/copy_to"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/cab_move_to"
        android:title="@string/move_to"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/cab_create_shortcut"
        android:title="@string/create_shortcut"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/cab_open_with"
        android:title="@string/open_with"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/cab_set_as"
        android:title="@string/set_as"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/cab_edit"
        android:icon="@drawable/ic_edit_vector"
        android:title="@string/edit"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cab_add_to_favorites"
        android:icon="@drawable/ic_star_off_vector"
        android:title="@string/add_to_favorites"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cab_remove_from_favorites"
        android:icon="@drawable/ic_star_on_vector"
        android:title="@string/remove_from_favorites"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cab_restore_recycle_bin_files"
        android:title="@string/restore_selected_files"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/cab_fix_date_taken"
        android:title="@string/fix_date_taken"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/cab_select_all"
        android:icon="@drawable/ic_select_all_vector"
        android:title="@string/select_all"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>
