<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add_to_favorites"
        android:icon="@drawable/ic_star_off_vector"
        android:title="@string/add_to_favorites"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_remove_from_favorites"
        android:icon="@drawable/ic_star_on_vector"
        android:title="@string/remove_from_favorites"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_restore_file"
        android:title="@string/restore_this_file"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_edit_vector"
        android:title="@string/edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_properties"
        android:icon="@drawable/ic_properties_vector"
        android:title="@string/edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_vector"
        android:title="@string/share"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_vector"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_set_as"
        android:icon="@drawable/ic_set_as_vector"
        android:title="@string/set_as"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_open_with"
        android:title="@string/open_with"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_show_on_map"
        android:title="@string/show_on_map"
        android:visible="false"
        app:showAsAction="never" />
</menu>
