<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sorting_dialog_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/sorting_dialog_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin">

        <RadioGroup
            android:id="@+id/sorting_dialog_radio_sorting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin">

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/sorting_dialog_radio_name"
                style="@style/RadioButtonStyle"
                android:text="@string/name" />

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/sorting_dialog_radio_path"
                style="@style/RadioButtonStyle"
                android:text="@string/path"/>

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/sorting_dialog_radio_size"
                style="@style/RadioButtonStyle"
                android:text="@string/size"/>

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/sorting_dialog_radio_last_modified"
                style="@style/RadioButtonStyle"
                android:text="@string/last_modified"/>

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/sorting_dialog_radio_date_taken"
                style="@style/RadioButtonStyle"
                android:text="@string/date_taken"/>

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/sorting_dialog_radio_random"
                style="@style/RadioButtonStyle"
                android:text="@string/random"/>

        </RadioGroup>

        <include
            layout="@layout/divider"/>

        <RadioGroup
            android:id="@+id/sorting_dialog_radio_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:paddingBottom="@dimen/medium_margin">

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/sorting_dialog_radio_ascending"
                style="@style/RadioButtonStyle"
                android:text="@string/ascending"/>

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/sorting_dialog_radio_descending"
                style="@style/RadioButtonStyle"
                android:text="@string/descending"/>
        </RadioGroup>

        <include
            android:id="@+id/use_for_this_folder_divider"
            layout="@layout/divider"/>

        <com.simplemobiletools.commons.views.MyAppCompatCheckbox
            android:id="@+id/sorting_dialog_numeric_sorting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/sort_numeric_parts"
            android:textSize="@dimen/small_text_size" />

        <com.simplemobiletools.commons.views.MyAppCompatCheckbox
            android:id="@+id/sorting_dialog_use_for_this_folder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/use_for_this_folder"
            android:textSize="@dimen/small_text_size" />

        <com.simplemobiletools.commons.views.MyTextView
            android:id="@+id/sorting_dialog_bottom_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/small_margin"
            android:paddingEnd="@dimen/medium_margin"
            android:text="@string/grouping_and_sorting"
            android:textSize="@dimen/smaller_text_size"/>

    </LinearLayout>
</ScrollView>
